[package]
name = "master_librarian_rust"
version = "0.4.0"
edition = "2021"
description = "Rust rewrite of Master Librarian with factory-based CLI parsing, builder-based assembly, pkg-config crate integration, deduplicated results and robust CSV output"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
pkg-config = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
